--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -367,7 +367,7 @@ jobs:
         include: ${{ fromJson(needs.build_details.outputs.build_include) }}
         exclude:
           - os: alpine
-            ocaml_version: 5.2.0_ox
+            ocaml_version: 5.2.0-ox
     container:
       image: savonet/liquidsoap-ci:${{ matrix.os }}-${{ matrix.ocaml_version }}
       options: --user root --privileged -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
