--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -608,9 +608,6 @@ jobs:
         platform: ${{ fromJson(needs.build_details.outputs.build_platform) }}
         ocaml_version: ${{ fromJson(needs.build_details.outputs.ocaml_version) }}
         include: ${{ fromJson(needs.build_details.outputs.build_include) }}
-        exclude:
-          - os: alpine
-            ocaml_version: 5.2.0-ox
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -661,7 +658,7 @@ jobs:
   build_docker_alpine:
     runs-on: ${{ matrix.runs-on }}
     needs: [build_details, build_posix, fetch_s3_artifacts]
-    if: needs.build_details.outputs.is_fork != 'true'
+    if: needs.build_details.outputs.is_fork != 'true' && matrix.ocaml_version != '5.2.0-ox'
     strategy:
       fail-fast: false
       matrix:
@@ -769,7 +766,7 @@ jobs:
   build_docker_alpine_minimal:
     runs-on: ${{ matrix.runs-on }}
     needs: [build_details, build_posix, fetch_s3_artifacts]
-    if: needs.build_details.outputs.is_fork != 'true'
+    if: needs.build_details.outputs.is_fork != 'true' && matrix.ocaml_version != '5.2.0-ox'
     strategy:
       fail-fast: false
       matrix:
