--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:0b50b648dc365da7aabc9730938055036305cfefe2a5a2b35eb3e057ec210756
+      image: savonet/liquidsoap-ci:debian_trixie
       options: --user opam
     env:
       HOME: /home/opam
@@ -96,7 +96,7 @@ jobs:
   build_js:
     runs-on: depot-ubuntu-24.04-4
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:0b50b648dc365da7aabc9730938055036305cfefe2a5a2b35eb3e057ec210756
+      image: savonet/liquidsoap-ci:debian_trixie
       options: --user opam
     env:
       HOME: /home/opam
@@ -159,7 +159,7 @@ jobs:
     needs: build_details
     if: github.event_name != 'pull_request' && github.repository_owner == 'savonet' && needs.build_details.outputs.branch == 'main'
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:0b50b648dc365da7aabc9730938055036305cfefe2a5a2b35eb3e057ec210756
+      image: savonet/liquidsoap-ci:debian_trixie
       options: --user root -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
     env:
       HOME: /home/opam
@@ -220,7 +220,7 @@ jobs:
     runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:0b50b648dc365da7aabc9730938055036305cfefe2a5a2b35eb3e057ec210756
+      image: savonet/liquidsoap-ci:debian_trixie
       options: --user root --privileged --ulimit core=-1 --security-opt seccomp=unconfined -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
     strategy:
       fail-fast: false
