Add missing dep

--- a/opam/liquidsoap-lang.opam
+++ b/opam/liquidsoap-lang.opam
@@ -16,6 +16,7 @@ depends: [
   "ppx_hash" {build}
   "sedlex" {>= "3.2"}
   "menhir" {>= "20240715"}
+  "fileutils"
   "xml-light"
   "odoc" {with-doc}
 ]
