--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
-          node-version: 24.x
+          node-version: 22
       - name: Parse using tree-sitter
         run: |
           git clone https://github.com/savonet/tree-sitter-liquidsoap.git
@@ -320,7 +320,7 @@ jobs:
       matrix:
         ocaml-compiler:
           - 4.14.x
-          - 5.3.x
+          - 5.x
     steps:
       - name: Checkout latest code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -340,19 +340,20 @@ jobs:
         run: |
           opam install --cli=2.1 --confirm-level=unsafe-yes .
       - name: Install ocamlformat
-        if: matrix.ocaml-compiler == '5.3.x'
+        if: matrix.ocaml-compiler == '4.14.x'
         run: |
           opam install ocamlformat=0.27.0
       - name: Set PY env variable.
-        if: matrix.ocaml-compiler == '5.3.x'
+        if: matrix.ocaml-compiler == '4.14.x'
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
       - name: Restore pre-commit cache
+        if: matrix.ocaml-compiler == '4.14.x'
         uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
         with:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Run pre-commit
-        if: matrix.ocaml-compiler == '5.3.x'
+        if: matrix.ocaml-compiler == '4.14.x'
         uses: pre-commit/action@2c7b3805fd2a0fd8c1884dcaebf91fc102a13ecd # v3.0.1
 
   build_posix:
