--- a/opam/liquidsoap.opam.template
+++ b/opam/liquidsoap.opam.template
@@ -19,3 +19,4 @@ to install one of ssl or tls-liquidsoap package."""
 ]
 depexts: ["coreutils"] {os = "macos" & os-distribution = "homebrew"}
 dev-repo: "git+https://github.com/savonet/liquidsoap.git"
+x-maintenance-intent: ["(latest)"]
