--- a/opam/liquidsoap.opam
+++ b/opam/liquidsoap.opam
@@ -20,7 +20,7 @@ depends: [
   "ocaml" {>= "4.14"}
   "mm" {>= "0.8.6"}
   "re" {>= "1.11.0" & < "1.14.0"}
-  "ocurl" {>= "0.9.2"}
+  "curl"
   "cry" {>= "1.0.3"}
   "camomile" {>= "2.0.0"}
   "uri"
