--- a/src/core/dune
+++ b/src/core/dune
@@ -365,6 +365,7 @@
   builtins_ffmpeg_bitstream_filters
   builtins_ffmpeg_decoder
   builtins_ffmpeg_filters
+  builtins_ffmpeg_filter_parse
   builtins_ffmpeg_encoder
   ffmpeg_avfilter_utils
   ffmpeg_audio_converter
