--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -607,6 +607,91 @@ jobs:
           prerelease: ${{ needs.build_details.outputs.is_rolling_release }}
           body: ${{ steps.release_notes.outputs.release_notes }}
           draft: ${{ !needs.build_details.outputs.is_rolling_release }}
+      - name: Manage release assets repo limit
+        id: manage_release_assets
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        with:
+          github-token: ${{ secrets.LIQUIDSOAP_RELEASE_ASSETS_TOKEN }}
+          script: |
+            const owner = 'savonet';
+            const repo = 'liquidsoap-release-assets';
+            const tag = '${{ needs.build_details.outputs.branch }}';
+            const maxAssets = 1000;
+
+            // Count new files to upload
+            const newFiles = `${{ steps.release_assets.outputs.release_assets }}`.trim().split('\n').filter(f => f.length > 0);
+            const newFilesCount = newFiles.length;
+            core.info(`New files to upload: ${newFilesCount}`);
+
+            // Get the release for this tag
+            let release;
+            try {
+              const { data } = await github.rest.repos.getReleaseByTag({
+                owner,
+                repo,
+                tag
+              });
+              release = data;
+            } catch (error) {
+              if (error.status === 404) {
+                core.info(`No existing release found for tag ${tag}, nothing to clean up`);
+                core.setOutput('assets_to_delete', '');
+                return;
+              }
+              throw error;
+            }
+
+            // Get all assets for this release
+            const assets = [];
+            let page = 1;
+            while (true) {
+              const { data } = await github.rest.repos.listReleaseAssets({
+                owner,
+                repo,
+                release_id: release.id,
+                per_page: 100,
+                page
+              });
+              if (data.length === 0) break;
+              assets.push(...data);
+              page++;
+            }
+
+            core.info(`Found ${assets.length} existing assets`);
+
+            // Calculate how many old assets we can keep
+            const maxOldAssets = maxAssets - newFilesCount;
+            core.info(`Maximum old assets to keep: ${maxOldAssets}`);
+
+            if (assets.length <= maxOldAssets) {
+              core.info(`Current asset count (${assets.length}) is within limit, no deletion needed`);
+              core.setOutput('assets_to_delete', '');
+              return;
+            }
+
+            // Sort assets by creation date (oldest first)
+            assets.sort((a, b) => new Date(a.created_at) - new Date(b.created_at));
+
+            // Calculate how many to delete
+            const assetsToDeleteCount = assets.length - maxOldAssets;
+            core.info(`Assets to delete: ${assetsToDeleteCount}`);
+
+            // Get the oldest assets to delete
+            const assetsToDelete = assets.slice(0, assetsToDeleteCount);
+            const assetNamesToDelete = assetsToDelete.map(a => a.name);
+
+            core.info(`Deleting assets: ${assetNamesToDelete.join(', ')}`);
+            core.setOutput('assets_to_delete', assetNamesToDelete.join('\n'));
+      - name: Delete old release assets from release repo
+        if: steps.manage_release_assets.outputs.assets_to_delete != ''
+        uses: mknejp/delete-release-assets@v1
+        with:
+          token: ${{ secrets.LIQUIDSOAP_RELEASE_ASSETS_TOKEN }}
+          tag: ${{ needs.build_details.outputs.branch }}
+          assets: ${{ steps.manage_release_assets.outputs.assets_to_delete }}
+          repository: savonet/liquidsoap-release-assets
+          fail-if-no-release: false
+          fail-if-no-assets: false
       - name: Upload assets to release repo
         uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2.5.0
         with:
