--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,29 +94,11 @@ jobs:
           LIQ_BUILD_MIN: true
 
   build_js:
-    runs-on: depot-ubuntu-24.04-4
-    container:
-      image: savonet/liquidsoap-ci:debian_trixie@sha256:dc7cb6d629091da7cc938e7e3d2d88b3830894c85d0700065c73cceeca5cf5ab
-      options: --user opam
-    env:
-      HOME: /home/opam
-    steps:
-      - name: Checkout code
-        run: |
-          cd /tmp/liquidsoap-full/liquidsoap
-          git remote set-url origin https://github.com/savonet/liquidsoap.git
-          git fetch origin ${{ github.sha }}
-          git checkout ${{ github.sha }}
-          mv .git /tmp
-          rm -rf ./*
-          mv /tmp/.git .
-          git reset --hard
-      - name: Build JS
-        run: |
-          cd /tmp/liquidsoap-full/liquidsoap
-          eval "$(opam config env)"
-          opam update
-          dune build --profile release ./src/js/interactive_js.bc.js
+    uses: ./.github/workflows/js.yml
+    with:
+      sha: ${{ github.sha }}
+      branch: ${{ needs.build_details.outputs.branch }}
+    needs: build_details
 
   tree_sitter_parse:
     runs-on: depot-ubuntu-24.04-4
@@ -156,7 +138,7 @@ jobs:
 
   update_doc:
     runs-on: depot-ubuntu-24.04-4
-    needs: build_details
+    needs: [build_details, build_js]
     if: github.event_name != 'pull_request' && github.repository_owner == 'savonet' && needs.build_details.outputs.branch == 'main'
     container:
       image: savonet/liquidsoap-ci:debian_trixie@sha256:dc7cb6d629091da7cc938e7e3d2d88b3830894c85d0700065c73cceeca5cf5ab
@@ -174,10 +156,11 @@ jobs:
           sudo -u opam -E git remote set-url origin https://github.com/savonet/liquidsoap.git
           sudo -u opam -E git fetch origin ${{ github.sha }}
           sudo -u opam -E git checkout ${{ github.sha }}
-      - name: Install node
-        run: |
-          apt-get update
-          apt-get install -y npm
+      - name: Download JS artifacts
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
+        with:
+          name: liquidsoap-js-${{ needs.build_details.outputs.branch }}
+          path: /tmp/liquidsoap-full/liquidsoap/_build/default/src/js
       - name: Build doc
         env:
           CPU_CORES: ${{ steps.cpu_cores.outputs.count }}
@@ -190,8 +173,6 @@ jobs:
           cd /tmp/liquidsoap-full/liquidsoap/
           mkdir -p /tmp/${{ github.run_number }}/odoc
           cp -rf _build/default/_doc/_html/* /tmp/${{ github.run_number }}/odoc
-          eval $(opam config env)
-          dune build src/js
           cd /tmp/liquidsoap-full/website
           make dist
           mkdir -p /tmp/${{ github.run_number }}/html
