--- a/.github/workflows/build-no-depopts.yml
+++ b/.github/workflows/build-no-depopts.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Get number of CPU cores
         uses: savonet/github-actions-cpu-cores-docker@f72bcfaa219a2f60deaf8b26d0707b1d9c67d274 # v1
         id: cpu_cores
+      - name: Checkout actions
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: .github/actions
       - name: Checkout code
         uses: ./.github/actions/checkout-liquidsoap
         with:
