--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           name: liquidsoap-js-${{ inputs.branch }}
           path: /tmp/${{ github.run_number }}/js-artifacts
+      - name: Checkout actions
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: .github/actions
       - name: Checkout code
         uses: ./.github/actions/checkout-liquidsoap
         with:
