--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -19,6 +19,10 @@ jobs:
     env:
       HOME: /home/opam
     steps:
+      - name: Checkout actions
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          sparse-checkout: .github/actions
       - name: Checkout code
         uses: ./.github/actions/checkout-liquidsoap
         with:
