--- a/.github/workflows/build-posix.yml
+++ b/.github/workflows/build-posix.yml
@@ -68,16 +68,13 @@ jobs:
       - name: Get number of CPU cores
         uses: savonet/github-actions-cpu-cores-docker@f72bcfaa219a2f60deaf8b26d0707b1d9c67d274 # v1
         id: cpu_cores
-      - name: Checkout actions
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          sparse-checkout: .github/actions
-          clean: false
       - name: Checkout code
-        uses: ./.github/actions/checkout-liquidsoap
-        with:
-          sha: ${{ inputs.sha }}
-          cleanup: true
+        run: |
+          cd /tmp/liquidsoap-full/liquidsoap
+          rm -rf doc/content/build.md doc/content/install.md
+          sudo -u opam -E git remote set-url origin https://github.com/savonet/liquidsoap.git
+          sudo -u opam -E git fetch origin ${{ inputs.sha }}
+          sudo -u opam -E git checkout ${{ inputs.sha }}
       - name: Build
         run: |
           cd /tmp/liquidsoap-full/liquidsoap
