--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,16 +38,13 @@ jobs:
           mkdir -p /tmp/${{ github.run_number }}/core
           chown -R opam /tmp/${{ github.run_number }}/core
           echo /tmp/${{ github.run_number }}/core/core.%h.%e.%t > /proc/sys/kernel/core_pattern
-      - name: Checkout actions
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          sparse-checkout: .github/actions
-          clean: false
       - name: Checkout code
-        uses: ./.github/actions/checkout-liquidsoap
-        with:
-          sha: ${{ inputs.sha }}
-          cleanup: true
+        run: |
+          cd /tmp/liquidsoap-full/liquidsoap
+          rm -rf doc/content/build.md doc/content/install.md
+          sudo -u opam -E git remote set-url origin https://github.com/savonet/liquidsoap.git
+          sudo -u opam -E git fetch origin ${{ inputs.sha }}
+          sudo -u opam -E git checkout ${{ inputs.sha }}
       - name: Build
         env:
           CPU_CORES: ${{ steps.cpu_cores.outputs.count }}
