--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           cd /tmp/liquidsoap-full/liquidsoap
           sudo -u opam -E opam update
-          sudo -u opam -E opam exec -- dune build --profile release src/js
+          sudo -u opam -E opam exec -- dune build --profile release src/js --verbose
       - name: Upload JS artifact
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
