--- a/.github/workflows/build-posix.yml
+++ b/.github/workflows/build-posix.yml
@@ -122,10 +122,10 @@ jobs:
           sudo -u opam -E ./.github/scripts/build-apk.sh
       - name: Upload alpine packages artifacts
         if: matrix.os == 'alpine'
-        uses: savonet/artifact-upload-docker-action@b82ab5126841a68ba17ba19a475ebcb30c3f2884
+        uses: savonet/artifact-upload-docker-action@ba9fb728e1d98b6864c16cd019047706bf9122de
         with:
           name: alpine-${{ matrix.platform }}-packages
-          path: /tmp/${{ github.run_number }}/alpine
+          path: /github/workspace/${{ github.run_number }}/alpine
       - name: Cleanup
         if: ${{ always() }}
         run: |
