Fix artifact upload path to include os_platform directory

--- a/.github/workflows/build-posix.yml
+++ b/.github/workflows/build-posix.yml
@@ -125,7 +125,7 @@ jobs:
         uses: savonet/artifact-upload-docker-action@main
         with:
           name: alpine-${{ matrix.platform }}-packages
-          path: /github/workspace/${{ github.run_number }}/alpine
+          path: /github/workspace/${{ github.run_number }}/${{ matrix.os }}_${{ matrix.platform }}/alpine
       - name: Cleanup
         if: ${{ always() }}
         run: |
