Mark as unavailable on windows.

--- a/opam/liquidsoap.opam.template
+++ b/opam/liquidsoap.opam.template
@@ -18,3 +18,4 @@ to install one of ssl or tls-liquidsoap package."""
     {success & !ssl-enabled & !tls-enabled}
 ]
 depexts: ["coreutils"] {os = "macos" & os-distribution = "homebrew"}
+available: os != "win32"
