--- a/opam/liquidsoap.opam
+++ b/opam/liquidsoap.opam
@@ -154,3 +154,4 @@ to install one of ssl or tls-liquidsoap package."""
     {success & !ssl-enabled & !tls-enabled}
 ]
 depexts: ["coreutils"] {os = "macos" & os-distribution = "homebrew"}
+available: os != "win32"
